XW-922 fix color in search input on ios

--- a/front/main/app/styles/component/_side-nav.scss
+++ b/front/main/app/styles/component/_side-nav.scss
@@ -322,6 +322,7 @@ $side-nav-item-height: 3.125rem;
 		background: transparent;
 		border: 0;
 		box-shadow:none;
+		color: #8f8e94;
 		font: inherit;
 		margin: 0;
 		padding: 0;
